Fix footer alignment

--- a/static/styles/common.css
+++ b/static/styles/common.css
@@ -1,4 +1,4 @@
-main, nav {
+body {
 	display: block;
 	margin: 0 auto;
 	max-width: 800px;
